--- a/composicao.css
+++ b/composicao.css
@@ -2,3 +2,12 @@ div.base {
     width: 960px;
     margin: auto;
 }
+
+section.bloco1 {
+    width: 200px;
+    float: left
+}
+
+section.bloco2 {
+    margin-left: 200px;
+}
