--- a/composicao.css
+++ b/composicao.css
@@ -1,13 +1,28 @@
+body {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
+}
+
 div.base {
-    width: 960px;
-    margin: auto;
+    background-color: #eeeeee;
+}
+
+h1,h2 {
+    margin: 0px;
+}
+
+p {
+    line-height: 1.5em;
 }
 
 section.bloco1 {
-    width: 200px;
-    float: left
+    background-color: orange;
 }
 
 section.bloco2 {
-    margin-left: 200px;
+    background-color: green;
+}
+
+section.bloco3 {
+    background-color: red;
 }
