--- a/composicao.css
+++ b/composicao.css
@@ -3,10 +3,6 @@ body {
     font-size: 20px;
 }
 
-div.base {
-    background-color: #eeeeee;
-}
-
 h1,h2 {
     margin: 0px;
 }
@@ -15,11 +11,20 @@ p {
     line-height: 1.5em;
 }
 
+div.base {
+    background-color: #eeeeee;
+    width: 960px;
+    margin: auto;
+}
+
 section.bloco1 {
+    width: 200px;
+    float: left;
     background-color: orange;
 }
 
 section.bloco2 {
+    margin-left: 200px;
     background-color: green;
 }
 
